Upgrade Apache Felix to Jakarta Servlet API 6.x (c.d.)
 - Change 'jakarta.servlet:jakarta.servlet-api:5.0.0' Maven dependency
to 'jakarta.servlet:jakarta.servlet-api:6.0.0'

 - Remove dependencies on deprecated Jakarta Servlet API 5.x classes and
methods

 - Upgrade 'org.osgi.service.servlet' dependency to support Jakarta
Servlet API 6.x

 - Upgrade 'commons-fileupload' dependency to support Jakarta Servlet
API 6.x

 - Upgrade to Java 17

 - Upgrade to Jetty 12

 - Update relevant Maven plugins to versions which support Java 17

 - Update relevant Maven plugins' and Pax Exam configuration to support
Java 17

 - Update OSGi metadata in POMs

 - Increase major version number in all updated modules

 - Update modules' dependencies' versions to latest version where they
refer to other updated module

 - Update 'Apache Felix HTTP Service' README

 - Various fixes and improvements

Signed-off-by: Michael H. Siemaszko <mhs@into.software>